# swe-ai-takehome

./: README.md  main.py  pyproject.toml
data/: time_motion_study.md
